--- a/alpine/Dockerfile
+++ b/alpine/Dockerfile
@@ -2,7 +2,7 @@ FROM centos:7
 LABEL devops_Engg="Anup"
 
 RUN  yum install httpd -y
-RUN ECHO "HELLO WOLRD THIS IS FROM IMAGE" >> /var/www/html/index.html
+RUN echo "HELLO WOLRD THIS IS FROM IMAGE" >> /var/www/html/index.html
 
 EXPOSE 80
 CMD httpd -DFOREGROUND
