--- a/centoshttp/Dockerfile
+++ b/centoshttp/Dockerfile
@@ -1,13 +1,13 @@
 
 FROM centos:7
 LABEL Dev="anup"
-RUN yum install httpd -y
-RUN rm -rf /var/www/html/index.html &&\
-    yum install unzip -y
+RUN yum install unzip httpd -y && \
+    yum clean all
+RUN rm -rf /var/www/html/index.html     
 WORKDIR /var/www/html/
 ADD https://www.free-css.com/assets/files/free-css-templates/download/page296/oxer.zip .
-RUN unzip oxer.zip &&\
+RUN unzip oxer.zip && \
     mv oxer-html/*  .
 
 EXPOSE 80
-CMD httpd  -DFOREGROUND
+CMD ["httpd" , "-DFOREGROUND"]
