--- a/kubernetes/service.yaml
+++ b/kubernetes/service.yaml
@@ -5,7 +5,8 @@ metadata:
 spec:
   type: NodePort
   selector: 
-    labels: my-pod
+    labels: 
+      app: my-pod
     #app.kubernetes.io/name: MyApp
   ports:
     - protocol: TCP
