--- a/kubernetes/pods_service_namspace.yaml
+++ b/kubernetes/pods_service_namspace.yaml
@@ -1,1 +1,27 @@
-
+---
+apiVersion: v1 
+kind: Pod
+Metadata:
+     label:
+      app: nginx
+spec: 
+  containers:
+    - name: nginx 
+      protocol: TCP
+      image: nginx:latest 
+      ports: 
+       - containerPort: 80
+...
+---
+apiVersion: v1
+kind: Service 
+Metadata:
+ name: service1
+spec:
+  selector: 
+    app: nginx 
+  type: NodePort
+  ports: 
+    - port: 80 
+      targetPort: 80
+...
