--- a/kubernetes/pods_service_namspace.yaml
+++ b/kubernetes/pods_service_namspace.yaml
@@ -1,7 +1,7 @@
 
 apiVersion: v1 
 kind: Pod
-Metadata:
+metadata:
      labels:
       app: nginx
 spec: 
@@ -15,7 +15,7 @@ spec:
 ---
 apiVersion: v1
 kind: Service 
-Metadata:
+metadata:
  name: service1
 spec:
   selector: 
