--- a/kubernetes/replicacontroller.yaml
+++ b/kubernetes/replicacontroller.yaml
@@ -22,4 +22,5 @@ spec:
             ports:
             - containerPort: 8080
               protocol: TCP
-    selector: myapp1
+    selector: 
+      app: myapp1
