--- a/kubernetes/replicacontroller.yaml
+++ b/kubernetes/replicacontroller.yaml
@@ -9,7 +9,7 @@ spec:
     template:
       metadata: 
         name: testnginx
-        label: 
+        labels: 
           app: myapp1
       spec:
         containers:
