--- a/kubernetes/replicaset.yaml
+++ b/kubernetes/replicaset.yaml
@@ -20,4 +20,4 @@ spec:
              protocol: TCP
   selector: 
     matchExpressions:
-      - {key: myapp1, operator: In, values: [xyzapp, my-pod , myapp1]}    
+      - {key: myapp1, operator: In, values: [ my-pod , myapp1]}    
