--- a/kubernetes/replicaset.yaml
+++ b/kubernetes/replicaset.yaml
@@ -17,7 +17,26 @@ spec:
           image: nginx:latest
           ports:
            - containerPort: 80
-             protocol: TCP
+             protocol: TCP 
+    metadata:
+          name: my-service
+          label: 
+            srvapp: app3
+          spec:
+            type: NodePort
+            selector:  
+                app: my-pod
+              #app.kubernetes.io/name: MyApp
+          ports:
+            - protocol: TCP
+              name: nginx
+              port: 80
+              targetPort: 80
+            - protocol: TCP
+              name: tomcat
+              port: 8080
+              targetPort: 8080
   selector: 
     matchExpressions:
-      - {key: myapp1, operator: In, values: [xyzapp, my-pod , myapp1]}    
+      - {key: myapp1, operator: In, values: [xyzapp]}  
+        {key: srvapp, operator: In, values: [app3]}  
