--- a/kubernetes/replicaset.yaml
+++ b/kubernetes/replicaset.yaml
@@ -21,7 +21,7 @@ spec:
     metadata: 
       name: tomcattest
       labels:
-        myapp1: xyzapp
+        myapp2: xyzapp1
     spec:
       containers:
         - name: tomcat
@@ -32,4 +32,4 @@ spec:
   selector: 
     matchExpressions:
       - {key: myapp1, operator: In, values: [xyzapp]}  
-        #{key: srvapp, operator: In, values: [app3]}  
+      - {key: myapp2, operator: In, values: [xyzapp1]}  
