--- a/kubernetes/service.yaml
+++ b/kubernetes/service.yaml
@@ -5,7 +5,7 @@ metadata:
 spec:
   type: NodePort
   selector:  
-      app: my-pod
+      myapp1: xyzapp
     #app.kubernetes.io/name: MyApp
   ports:
     - protocol: TCP
