--- a/kubernetes/deployment.yaml
+++ b/kubernetes/deployment.yaml
@@ -11,7 +11,7 @@ spec:
       app: newapp
   strategy:
    type: RollingUpdate
-   rollingupdate: 
+   rollingUpdate: 
     maxSurge: 2
     maxUnavailable: 0
   template:
