--- a/kubernetes/deployment.yaml
+++ b/kubernetes/deployment.yaml
@@ -1,7 +1,7 @@
 apiVersion: apps/v1 
 kind: Deployment
 metadata: 
-  name: testDeployment
+  name: testdeployment
   labels: 
     app: newapp
 spec:
