--- a/kubernetes/deployment.yaml
+++ b/kubernetes/deployment.yaml
@@ -25,6 +25,14 @@ spec:
           ports:
             - containerPort: 80
               protocol: TCP
+          resources:
+              requests:
+                memory: "64Mi"
+                cpu: "250m"
+              limits:
+                memory: "128Mi"
+                cpu: "500m"
+                  
 ---
 apiVersion: 
 kind: 
