--- a/kubernetes/horizontalpodautoscaling/hpa.yaml
+++ b/kubernetes/horizontalpodautoscaling/hpa.yaml
@@ -23,3 +23,10 @@ spec:
             ports:
               -   containerPort: 80
                   protocol: TCP
+            resources:
+              requests:
+                memory: "64Mi"
+                cpu: "250m"
+              limits:
+                memory: "128Mi"
+                cpu: "500m"
