--- a/kubernetes/horizontalpodautoscaling/hpa.yaml
+++ b/kubernetes/horizontalpodautoscaling/hpa.yaml
@@ -30,3 +30,22 @@ spec:
               limits:
                 memory: "128Mi"
                 cpu: "500m"
+---
+apiVersion: autoscaling/v2
+kind: HorizontalPodAutoscaler
+metadata:
+  name: php-apache
+spec:
+  scaleTargetRef:
+    apiVersion: apps/v1
+    kind: Deployment
+    name: testdeployment
+  minReplicas: 1
+  maxReplicas: 3
+  metrics:
+  - type: Resource
+    resource:
+      name: cpu
+      target:
+        type: Utilization
+        averageUtilization: 50
