--- a/kubernetes/horizontalpodautoscaling/hpa.yaml
+++ b/kubernetes/horizontalpodautoscaling/hpa.yaml
@@ -18,7 +18,7 @@ spec:
         app: testapp
     spec:
         containers:
-          - image: nginx:latest
+          - image: anupdudhe/frontendrds
             name: nginx
             ports:
               -   containerPort: 80
