--- a/kubernetes/volume/pv.yaml
+++ b/kubernetes/volume/pv.yaml
@@ -5,7 +5,7 @@ metadata:
 spec:
   capacity:
           storage: 10G
-  volumeMode:  filesystem
+  volumeMode:  Filesystem
   accessModes:
             - ReadWriteOnce
   persistentVolumeReclaimPolicy: Recycle
