--- a/kubernetes/volume/pvc.yml
+++ b/kubernetes/volume/pvc.yml
@@ -1,1 +1,12 @@
-
+apiVersion: v1
+kind: PersistentVolumeClaim
+metadata: 
+      name: pvcvol
+spec:
+  storageClassName: standard
+  accessModes:
+    - ReadWriteOnce
+ volumeMode: Filesystem
+  resources:
+    requests:
+      storage: 3Gi  
