--- a/microservices/mobile/deployment-hpa.yml
+++ b/microservices/mobile/deployment-hpa.yml
@@ -1,1 +1,53 @@
 
+
+
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  name: deployappmob
+  labels:
+      app: deployappmob
+spec:
+    replicas: 2     #desiredstate
+    strategy: 
+          type: RollingUpdate
+    selector: 
+          matchLabels:
+            app: deployappmob
+    template: 
+        metadata: 
+            labels: 
+              app: deployappmob   
+        spec: 
+          containers:
+             - name: frontendmobapp
+               image: anupdudhe/mobile
+               ports:
+                  - containerPort: 80
+                    protocol: TCP
+               resources:
+                  requests:
+                        memory: "64Mi"
+                        cpu: "125m"
+                  limits:     
+                        memory: "128Mi"
+                        cpu: "250m"
+---
+apiVersion: autoscaling/v2
+kind: HorizontalPodAutoscaler
+metadata:
+  name: hpa
+spec:
+  scaleTargetRef:
+    apiVersion: apps/v1
+    kind: Deployment
+    name: deployappmob
+  minReplicas: 1
+  maxReplicas: 4
+  metrics:
+  - type: Resource
+    resource:
+      name: cpu
+      target:
+        type: Utilization
+        averageUtilization: 50
