--- a/microservices/laptop/deployment-hpa.yml
+++ b/microservices/laptop/deployment-hpa.yml
@@ -19,7 +19,7 @@ spec:
               app: deployapplap   
         spec: 
           containers:
-             - name: frontendapp
+             - name: frontendmobapp
                image: anupdudhe/laptop
                ports:
                   - containerPort: 80
