--- a/microservices/laptop/service.yml
+++ b/microservices/laptop/service.yml
@@ -5,7 +5,7 @@ metadata:
 spec:
     type: ClusterIP
     selector:
-          app: 
+           app: deployapplap
     ports:
         - port: 80
           targetPort: 80
