--- a/microservices/laptop/deployment-hpa.yml
+++ b/microservices/laptop/deployment-hpa.yml
@@ -20,7 +20,7 @@ spec:
         spec: 
           containers:
              - name: frontendlapapp
-               image: anupdudhe/laptop
+               image: anupdudhe/frontendrds
                ports:
                   - containerPort: 80
                     protocol: TCP
