--- a/microservices/mobile/deployment-hpa.yml
+++ b/microservices/mobile/deployment-hpa.yml
@@ -21,7 +21,7 @@ spec:
         spec: 
           containers:
              - name: frontendmobapp
-               image: anupdudhe/mobile
+               image: anupdudhe/backendrds
                ports:
                   - containerPort: 80
                     protocol: TCP
