--- a/lbpod.yml
+++ b/lbpod.yml
@@ -11,7 +11,7 @@ spec:
               cpu: "100m"
               memory: "128Mi" 
           ports: 
-              - containerPort: 80
+              - containerPort: 81
                 name: http
                 protocol: TCP
         - name: tomcat 
@@ -23,4 +23,4 @@ spec:
           ports: 
               - containerPort: 8080
                 name: java
-                protocol: T
+                protocol: TCP
