--- a/deployment.yml
+++ b/deployment.yml
@@ -26,7 +26,7 @@ spec:
         spec:
             containers: 
                 - name: nginx 
-                  image: nginx:latest
+                  image: httpd:latest
                   resources: 
                     requests:
                       cpu: "100m"
