--- a/daemonset.yml
+++ b/daemonset.yml
@@ -17,7 +17,7 @@ spec:
       spec:
         containers:
           - name: cwatch
-            image: cloudwatch-agent
+            image: amazon/cloudwatch-agent:latest
             resources: 
                 requests:
                   cpu: "100m"
