--- a/daemonset.yml
+++ b/daemonset.yml
@@ -5,7 +5,7 @@ metadata:
   labels:
     app: depapp
 spec:
-    replicas: 2
+    #replicas: 2
     selector: 
       matchLabels: 
           app: depapp
