--- a/replicaset.yml
+++ b/replicaset.yml
@@ -5,6 +5,11 @@ metadata:
       labels:
         app: replicasetapp
 spec: 
+    strategy:
+        type: RollingUpdate
+        rollingUpdate:
+              maxSurge: 1     # Maximum number of pods that can be created over the desired replicas
+              maxUnavailable: 1  # Maximum number of pods that can be unavailable during the update
     selector: 
       matchExpressions:      
            -  { key: app, operator: In , values: [replicasetapp,  new-app]}
@@ -12,7 +17,7 @@ spec:
            #-  { key: app, operator: NotIn , values: [replicasetapp,  new-app]}
       #matchLabels: 
             #app: replicasetapp
-    replicas: 3
+    replicas: 2
     template:
         metadata: 
           labels:
