--- a/Ingress/Tomcatmicro/deploymenthpa.yml
+++ b/Ingress/Tomcatmicro/deploymenthpa.yml
@@ -19,7 +19,7 @@ spec:
         spec: 
           containers:
              - name: backendapp
-               image: tomcat
+               image: tomcat:latest
                ports:
                   - containerPort: 8080
                     protocol: TCP
