--- a/Ingress/Tomcatmicro/service.yml
+++ b/Ingress/Tomcatmicro/service.yml
@@ -1,14 +1,13 @@
-
 apiVersion: v1
 kind: Service
 metadata: 
-  name: frontendsrv
+  name: backendsrv
 spec:
   type: ClusterIP
   selector:
-    app: deployappfront 
+    app: deployappback 
   ports:
-    - port: 80
-      targetPort: 80
-      name: http
+    - port: 8080
+      targetPort: 8080
+      name: tomcat
       protocol: TCP
