--- a/batch38Docker/apachehttpd/Dockerfile
+++ b/batch38Docker/apachehttpd/Dockerfile
@@ -12,7 +12,7 @@ RUN rm -rf /var/www/html/index.html
 WORKDIR /var/www/html/
 
 #we are appending static website logic from remote server 
-ADD https://www.free-css.com/assets/files/free-css-templates/download/page296/oxer.zip .
+COPY oxer.zip .
 
 #we are running few commands in /var/www/html location
 RUN unzip oxer.zip
