--- a/batch38Docker/apachehttpd/Dockerfile
+++ b/batch38Docker/apachehttpd/Dockerfile
@@ -4,7 +4,7 @@ FROM  ubuntu:20.04
 LABEL DEVOPSENGG="ANUP"
 
 #we are installing few packages in our image
-RUN apt update 
+#RUN apt update 
 RUN apt install unzip apache2 -y
 RUN rm -rf /var/www/html/index.html
 
