--- a/DockerBatch37/hostingapachefe/Dockerfile
+++ b/DockerBatch37/hostingapachefe/Dockerfile
@@ -6,5 +6,13 @@ LABEL "image=frontendstatic"
 #we are running few commands in our container(during container creation)
 RUN apt update 
 RUN apt install apache2 unzip -y
+RUN rm -rf /var/www/html/index.html
 #we are copying source code from local storage
-COPY 
+COPY oxer.zip /var/www/html/oxer.zip
+#we are moving to /var/www/html
+WORKDIR /var/www/html
+#we are unzipping and extracting the source code in default deployment enviornment location
+RUN unzip oxer.zip
+RUN mv oxer-html/* .
+#we are providing container a processs 
+CMD ["apachectl", "D" ,"FOREGROUND"]
