--- a/DockerBatch37/hostingapachefe/Dockerfile
+++ b/DockerBatch37/hostingapachefe/Dockerfile
@@ -2,7 +2,7 @@
 #we are placing a base for our docker image
 FROM ubuntu:latest
 #we are labeling our docker image here
-LABEL "image=frontendstatic"
+LABEL image="frontendstatic"
 #we are running few commands in our container(during container creation)
 RUN apt update 
 RUN apt install apache2 unzip -y
