--- a/DockerBatch37/hostingapachefe/Dockerfile
+++ b/DockerBatch37/hostingapachefe/Dockerfile
@@ -14,5 +14,7 @@ WORKDIR /var/www/html
 #we are unzipping and extracting the source code in default deployment enviornment location
 RUN unzip oxer.zip
 RUN mv oxer-html/* .
+#we are exposing our container to a port
+EXPOSE 80
 #we are providing container a processs 
 CMD ["apachectl", "D" ,"FOREGROUND"]
