--- a/batch38Docker/ThreeTier/Backend/Dockerfile
+++ b/batch38Docker/ThreeTier/Backend/Dockerfile
@@ -9,7 +9,7 @@ RUN apt update && \
 ADD https://s3-us-west-2.amazonaws.com/studentapi-cit/student.war /opt/apache-tomcat-9.0.93/webapps/
 ADD https://s3-us-west-2.amazonaws.com/studentapi-cit/mysql-connector.jar  /opt/apache-tomcat-9.0.93/lib/
 COPY context.xml  /opt/apache-tomcat-9.0.93/conf/
-
+RUN chmod +rwx /opt/apache-tomcat-9.0.93/bin/*.sh
 
 EXPOSE 8080
 CMD ["/opt/apache-tomcat-9.0.93/bin/catalina.sh", "run"]
