--- a/DockerBatch37/hostingapachefe/dockerthreetier/backend/Dockerfile
+++ b/DockerBatch37/hostingapachefe/dockerthreetier/backend/Dockerfile
@@ -7,6 +7,8 @@ RUN apt update && \
     unzip apache-tomcat-9.0.93.zip
 ADD https://s3-us-west-2.amazonaws.com/studentapi-cit/student.war  apache-tomcat-9.0.93/webapps/
 ADD https://s3-us-west-2.amazonaws.com/studentapi-cit/mysql-connector.jar apache-tomcat-9.0.93/lib/
-COPY 
+COPY context.xml apache-tomcat-9.0.93/conf/
+RUN chmod +rwx /opt/apache-tomcat-9.0.93/bin/*.sh
 
-    
+EXPOSE 8080
+CMD ["/opt/apache-tomcat-9.0.93/bin/catalina.sh", "run"]    
