--- a/docercomposeb38/dockercompose/docker-compose.yml
+++ b/docercomposeb38/dockercompose/docker-compose.yml
@@ -9,7 +9,7 @@ services:          #default synxtax
     network_mode:   #providing network mode
         bridge
 
-volume: 
+volumes: 
       myapp
 
 
