--- a/dockercomposeb37/dockercompose/docker-compose.yml
+++ b/dockercomposeb37/dockercompose/docker-compose.yml
@@ -1,7 +1,8 @@
 source:  #source syntax comples the creation of cont from img via docfile , assigns network , assigns volumes as well.
   nginxfrontendconone:
       build: .
-      ports: - '81:81'
+      ports: 
+          - '81:81'
       network_mode: bridge
       container_name: frontnend
       volumes: - myapp:/usr/share/nginx/html/ 
