--- a/dockercomposeb37/dockercompose/docker-compose.yml
+++ b/dockercomposeb37/dockercompose/docker-compose.yml
@@ -5,7 +5,8 @@ source:  #source syntax comples the creation of cont from img via docfile , assi
           - '81:81'
       network_mode: bridge
       container_name: frontnend
-      volumes: - myapp:/usr/share/nginx/html/ 
+      volumes: 
+         - myapp:/usr/share/nginx/html/
   nginxfrontendcontwo:
       build: . 
       #ports: - "81:81"
