--- a/kubernetesb38/manifestfile/service.yml
+++ b/kubernetesb38/manifestfile/service.yml
@@ -1,7 +1,7 @@
 apiVersion: v1 
 kind: Service
 metadata:
-        name: ClusterIP #cluster 
+        name: clusterip #cluster 
 spec:
     selector:
           app: mypod
