--- a/kubernetesb38/manifestfile/nodeportservice.yml
+++ b/kubernetesb38/manifestfile/nodeportservice.yml
@@ -1,7 +1,7 @@
 apiVersion: v1 
 kind: Service
 metadata:
-        name: nodeport  #cluster 
+        name: nodeport1  #cluster 
 spec:
     selector:
           app: mypod  
