--- a/kubernetesb38/manifestfile/pod.yml
+++ b/kubernetesb38/manifestfile/pod.yml
@@ -1,10 +1,10 @@
 apiVersion:  v1  #acts a manuall to your system
 kind: Pod
 metadata:  #like a tag
-        name: mypod
+        name: mypod1
 spec:
  containers:
-    - name: mypod-cont
+    - name: mypod-cont1
       image: nginx:latest
       resources: 
           requests:
